--- a/doc/vodml-lite-mapping.tex
+++ b/doc/vodml-lite-mapping.tex
@@ -34,7 +34,9 @@
   morekeywords={ref,utype,dmrole, dmtype, value}% list your attributes here
 }
 \author{François Bonnarel}
+\author{Gilles Landais}
 \author{Laurent Michel}
+\author{Jesus Salgado}
 
 \editor{Laurent Michel}
 
