--- a/doc/vodml-lite-mapping.tex
+++ b/doc/vodml-lite-mapping.tex
@@ -4,7 +4,7 @@
 \usepackage{array}
 \newcolumntype{L}{>{\centering\arraybackslash}m{3cm}}
 
-\title{VODML Mapping Lite Syntax}
+\title{Mango Mapping Syntax}
 
 % see ivoatexDoc for what group names to use here
 \ivoagroup{DM}
@@ -70,8 +70,12 @@ infrastructure that enable VO applications.
 
 
 \section{Introduction}
+This standard comes after many discussions in the VO about the syntax to be used to annotate VOTable. 
+The existing mapping based on GROUP works fine with the simplest cases. It has the disadvantage of being based on Utypes which are not clearly connected with the underlying model. Utypes are actually used to represent simple structures. In the current implementations, the client know the data structures (e.g. coordinate system) and pick values within the group to fill them. For now, mone discover or reconstruct a classe hierarchy from groups either. 
+The purpose of the VODML mapping in VOTables is to provide a bridge between the model it refers to and the data. The mapping processing is meant to deliver a model instance set with values taken out the data table. In theory, a perfecly faith mapping should be capable of rendering any model feature. In our opinion this ambitious goal led to a mapping syntax difficult to manage.
+We prefer to discard this round-trip requirement and to keep focused on the client needs and the easiness of the VOTable annotation process.
 
-???? Write something ????
+Our main use case is the annotation  of pre-existing data. This  means the annotation process must succeed whatever the way data are arranged even if they do not contain all quantities requested by the model.  We consider that the client just needs to reconstruct the data hierarchy and to get a full description of the used coordinate systems. For most of the usages (display, plot, match, computation),  complex data hierarchies can be wrapped in 3 data types, the simple values, the tuples and the lists. The mango mapping has been built upon these 3 types with a few others annotations guiding the work of the parser.
 
 \lstset{language=XML}
 
@@ -98,49 +102,85 @@ IVOA architecture \citep{note:VOARCH}.
 
 \section{Use Cases and Requirement}
 
-\subsection{Shy Annotations}
+\subsection{Use Cases}
+
+\subsubsection{Client Side}
+The mapping is self consistant. The role of the mapping is to give the client all information it needs a reconstruct a datastructure similar to the model one. 
+A model-aware client must be able to do this  this without implementing any code specific to any particular model.  The mapping syntax is independant of the model. The structure of the mapped model is given by the arrangement of the mapping elements, not by the elements them-self
+.
+
+\subsubsection{Server Side}
+We have identified 3 sorts of servers that could annotate data:
+\begin{enumerate}
+   \item Mission data provider: the data annotation can be set once forever for each data product at the design phase.
+   \item Archival data provider: The data annotation must be done for each archived datat set. The curator has a little control, on the data format and he/she has to do his best to math data with the model(s) 
+   \item  TAP data provider: In case of TAP services, the annotation process in of charge of the TAP server that must match the queried data with the model quantities.
+\end{enumerate}
+
+The goal of the version is to support 1) and 2) with a special attention to facilitate 2). 3) is still an experimental feature at the time of this specification.
+
+The annotation process can represent a significant extra work for the curator team that must be limited as much as possible. To do so the mapping syntax is designed to facilitate the use of templates. The structure of the mappinfg DOM does not depends on the way mapped data are arranged. The connection between  real data and mapping is done through XML elements attributes without changing the nature or the location of the mapping elements . 
+
+
+\subsection{Requirements}
+
 \begin{itemize}
-   \item Must not alter the original VOTable content
-   \item Reasonably compact
-   \item Reasonably human readable
-   \item Must be parsable without breaking working code
+\item Shy Annotations: The data mapping must not affect the operation of the existing clients
+
+\item Faithful Annotations: The structure of the annotation must be faithful to any VODML compliant model. 
+
+
+\item Different Usage Levels 
+\begin{itemize}
+   \item The data mapping must be easy to be ignored by the client
+   \item The data mapping must allow clients to easily detect the model on which data are mapped
+   \item The data mapping must allow clients to easily get the metadata (e.g. coordinate systems)
+   \item The data mapping must allow clients to get full model instances for each table row
 \end{itemize}
 
-\subsection{Faithful Annotations}
+\item Easy to Build 
 \begin{itemize}
-   \item The structure of the annotation is faithful to that of the model 
+   \item The mapping structure must be independant of the data structure
+   \item The mapping syntax should facilitate the building of mapping components and templates.
 \end{itemize}
 
-\subsection{Different Usage Levels}
+\item Complex Data Mapping 
 \begin{itemize}
-   \item Easy to ignore
-   \item Just detect the model on which data are mapped
-   \item Just get the metadata
-   \item Get full model instances for each table row
+   \item The mapping syntax must support to retrieve data over several tables
+   \item The mapping syntax must be able to filter the data rows that are part of the current instance
+   \item The mapping syntax must be able to group data rows in an set of instances
+\end{itemize}
 \end{itemize}
 
-\subsection{Easy to Build}
-\begin{itemize}
-   \item The mapping structure is independant of the data structure
-   \item Possibility of building components and templates
-\end{itemize}
+The syntax specified in this standard gives rules to build consistant annotations for any model. However, it do not prevent to do foolish things, the same way that a programming langage grammar does not prevent against irrelevant software.
 
-\subsection{Complex Data Mapping}
-\begin{itemize}
-   \item Multitable
-   \item Column filtering
-   \item Data grouping
-\end{itemize}
 
-This alternative mapping syntax keeps the same basics as the original proposal:
+
+%\begin{itemize}
+%	\item This mapping syntax supports directive for the clients which are not part of the model (e.g. aggregation request or data filters).
+%	\item The mapping as an explicit entry point, telling to the client what is the VOTable content.
+%	\item Processing this alternate syntax require for the client to apply rules not states in the VOTable itself.
+%\end{itemize}
+
 
 \section{Syntax}
 
-\begin{itemize}
-	\item This mapping syntax support directive for the clients which are not part of the model (e.g. aggregation request or data filters).
-	\item The mapping as an explicit entry point, telling to the client what is the VOTable content.
-	\item Processing this alternate syntax require for the client to apply rules not states in the VOTable itself.
-\end{itemize}
+\subsection{Mapping Block Structure}
+
+The mapping block is outside of the data tables. Its scope is the whole VOTable. Its stucture is given below.
+
+\begin{lstlisting}[caption={INSTANCE bloc example},captionpos=b]
+ <VODML>
+    <MODELS>   ...  </MODELS>
+    <GLOBALS>   ...  </GLOBALS>
+
+    <TEMPLATES tableref=...>  ... </TEMPLATES tableref=...>
+    <TEMPLATES tableref=...> ...  </TEMPLATES tableref=...>
+    ...
+ </VODML>
+\end{lstlisting}
+
+The mapping construction rules are the same whatever the model or the data layout are.
 
 \begin{itemize}
     \item The mapping is located in a \texttt{<VODML>} block, child of \texttt{<VOTABLE>}.
@@ -150,9 +190,13 @@ This alternative mapping syntax keeps the same basics as the original proposal:
     \item There is one \texttt{<GLOBALS>} block containing data shared by the whole mapping.
 \end{itemize}
 
+\subsection{MODELS}
+
+The models blocks contains the list of the models mapped in the block. Models referenced in \texttt{MODELS} are not necessary VO standards, but thet must be access through a VODML URI.
+
 \subsection{GLOBALS}
 
-Contains  \texttt{INSTANCE}s with fixed values that can be used everywhere in the \texttt{VODML}.
+Contains  \texttt{INSTANCE}s with that can be used everywhere in the \texttt{VODML}.
 
 
 \begin{lstlisting}[caption={INSTANCE bloc example},captionpos=b]
@@ -171,19 +215,45 @@ Contains  \texttt{INSTANCE}s with fixed values that can be used everywhere in th
   </GLOBALS>
 \end{lstlisting}
 
-
+\texttt{INSTANCE}s contained in \texttt{GLOBALS} should have an  \texttt{@ID} attribute so that they can be referenced from other instances
 
 
 \begin{table}[ht!]
      \begin{tabular}{|p{3cm}|p{7cm}|}
        \hline Child &  Role\\
-       \hline  \texttt{INSTANCE}    &  \texttt{GLOBALS} children must be \texttt{INSTANCE} . \\       
+       \hline  \texttt{INSTANCE}    &  Model instances with a scope covering the whole VOTable . \\       
        \hline 
      \end{tabular}
-     \caption{Supported  \texttt{GLOBALS} children} 
+     \caption{Allowed  \texttt{GLOBALS} children} 
  \end{table}
 
  \texttt{GLOBALS} has no attributes. 
+
+
+\subsection{TEMPLATES}
+
+There is one \texttt{TEMPLATE} block for each mapped table in the VOTAble 
+
+\begin{table}[ht!]
+     \begin{tabular}{|p{3cm}|p{7cm}|}
+       \hline Child &  Role\\
+       \hline  \texttt{INSTANCE}    & The table data are mapped on these instances.  \\              
+       \hline  \texttt{ARRAY}    &  There is one instance per table row. The structure of those instance is given by the ARRAY children \\              
+       \hline  \texttt{COMPOSITION}    &  The table data are mapped on an instance list\\       
+       \hline 
+     \end{tabular}
+     \caption{Allowed  \texttt{TEMPLATES} children} 
+ \end{table}
+
+
+\begin{table}[ht!]
+     \begin{tabular}{|p{1.5cm}|p{4cm}|p{7cm}|}
+       \hline Attribute & Requ. level & Role\\
+       \hline  @tableref  & Mandatory & The @ID or the @name of the mapped table  \\
+       \hline 
+     \end{tabular}
+     \caption{\texttt{TEMPLATES} attributes} 
+ \end{table}
 
 
 \subsection{INSTANCE}
@@ -206,8 +276,6 @@ Mapping for either object type or a datatype instances.
     </INSTANCE>
 </INSTANCE>
 \end{lstlisting}
-
-
 
 
 \begin{table}[ht!]
