--- a/doc/vodml-lite-mapping.tex
+++ b/doc/vodml-lite-mapping.tex
@@ -9,7 +9,30 @@
 % see ivoatexDoc for what group names to use here
 \ivoagroup{DM}
 
+\newcommand{\TODO}[1]{%
+    \noindent%
+    \colorbox{todocolor}{%
+            \parbox{0.85\linewidth}{\sffamily \textbf{TODO:}\\
+            #1}
+    }%
+    \vspace{2pt}
 
+}
+
+\newcommand{\note}[1]{%
+    \noindent%
+    \textcolor{darkgrey}{{\sffamily Note:} \emph{#1}}%
+}
+
+\newcommand{\comment}[1]{%
+    \noindent%
+    \textcolor{red}{{\sffamily Comment:} \emph{#1}}%
+}
+
+\definecolor{todocolor}{rgb}{1,1,0.8}
+\definecolor{darkred}{rgb}{0.6,0,0}
+\definecolor{rose}{rgb}{1.0,0.88,0.88}
+\definecolor{darkgrey}{rgb}{0.35,0.35,0.35}
 \definecolor{gray}{rgb}{0.4,0.4,0.4}
 \definecolor{darkblue}{rgb}{0.0,0.0,0.6}
 \definecolor{maroon}{rgb}{0.5,0,0}
@@ -73,15 +96,15 @@ infrastructure that enable VO applications.
 The first purpose of a model is to provide,  for a particular domain, a formal description of the relevant quantities and of the way they are linked together .
 This documentary role facilitates the communication between the stackholders and thus the design of interoperability protocols. 
 
-At data level, the interoperability consists in arranging searched data in a way that a client can understand them without taking care of their origin. So that, the same code can process and compare data coming from different sources.  That way to arrange data is given by the model.
+At data level, interoperability consists in arranging searched data in a way that a client can understand them without taking care of their origin. So that, the same code can process and compare data coming from different sources.  That way to arrange data is given by the model.
 
-This is not easy to do with VOtables because VOTables are containers. The VOTable schema cannot say how data are mapped onto a model or whether they match any model either. This is not a problem for simple protocol responses (ref) because the VOTable structure is defined by the protocol itself but this is however a big issue for VOTables containing native data such as Vizier queries or TAP response.
+This is not easy to do with VOtables because VOTables are containers. The VOTable schema cannot say how data are mapped onto which model or whether they match any model either. This is not an issue for simple protocol responses (ref) because the VOTable structure is defined by the protocol itself but this is however a big issue for VOTables containing native data such as Vizier queries or TAP response.
 
 The challenge here is to bind native data with a given model in way that a model aware software can see them as model instances while maintaining the possibility to access them in their original forms.
 This is partially done with UTypes that connect FIELDs or PARAMs with model leaves. Unfortunately, there is no standard way to construct UTypes and thus to parse them. This is just because UTypes have been invented at a period when there was no standard way to serialize model.
 
-The VODML (ref) standard, REC since 2016,  is a meta-model that gives a standard way to design VO models and to make them machine-readable. In VODML, model leaves are no longer identified by long strings denoting the path through the model (Utypes) but by their location in the model hierarchy.
-The consequence is that an annotation mechanism based on VODML must be able to reconstruct the model hierarchy. This is very interesting because a copy the model hierarchy with leaves set with real data is nothing else that a model instance which is exactly what we need to be interoperable.
+VODML (ref), which is  a REC since 2016,  is a meta-model that gives a standard way to design VO models and to make them machine-readable. In VODML, model leaves are no longer identified by long strings denoting the path through the model, as Utypes do,  but by their location in the model hierarchy.
+The consequence is that an annotation mechanism based on VODML must be able to reconstruct the model hierarchy. This is very interesting because a copy that model hierarchy with leaves set with real data is nothing else that a model instance which is exactly what we need to be interoperable.
 
 The idea of the VODML mapping is to insert on the top of the VOTable an XML block denoting the model structure and containing references to the actual data.
 So that, to build an model instance, the model-aware client has just to make a copy of that structure and to resolve the references. Other clients can just ignore the mapping block. This approach, has been proposed by (GL and OL). 
@@ -196,6 +219,7 @@ IVOA architecture \citep{note:VOARCH}.
 \subsection{Use Cases}
 
 \subsubsection{Client Side}
+\TODO{Put a real use case}
 The mapping is self consistant. The role of the mapping is to give the client all information it needs a reconstruct a datastructure similar to the model one. 
 A model-aware client must be able to do this  this without implementing any code specific to any particular model.  The mapping syntax is independant of the model. The structure of the mapped model is given by the arrangement of the mapping elements, not by the elements them-self
 .
